Fix all hbox violations.

--- a/latex_styles/custom_pdf.sty
+++ b/latex_styles/custom_pdf.sty
@@ -3,6 +3,12 @@
 % For example, you can define the proper hypenation of any words that LaTeX
 % can't hyphenate natively.
 % \hyphenation{Ja-va-Script}
+\hyphenation{play-er}
+\hyphenation{game-play}
+\hyphenation{holo-deck}
+\hyphenation{play-testing}
+\hyphenation{Mo-nop-o-ly}
+\hyphenation{blue-prints}
 % You can also include and use packages.
 % \usepackage{newunicodechar}
 % \newunicodechar{★}{\ensuremath{\star}}
